fix: avoid potential null pointer exception with lazy load; use getUserId() instead of getCreatedBy()